fix pop for deployments